syntax = "proto3";
option go_package = "plants_server/proto/ps";
package ps;
import "base/base.proto";
import "base/model.battle.proto";

// 请求创建房间 (由其他服务器调用)
message CreateBattleMgrRoomReq {
  base.BattleRoomContext context = 1;
}

message CreateBattleMgrRoomRes {
  base.Res res = 1;
  base.BattleRoomSummary room_summary = 2;
}

// 战斗节点上线通知 (由 battle 通知 battle_mgr)
message BattleRoomOnlineReq { 
  uint32 server_id = 1;
}

message BattleRoomOnlineRes {
  base.Res res = 1;
}